add list files endpoint
